<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">TourApp</string>
    <string name="btn_media_next1">Next</string>
    <string name="btn_media_back_step1">Back</string>
    <string name="btn_media_final_step1">Submit the guide</string>
    <string name="set_media_max_items1">4</string>
    <string name="txt_media_other1">&#160;out of&#160;</string>
    <string name="btn_media_reset1">Reset</string>
    <string name="intro_media">Please check all your video.</string>
    <string name="intro_media_notes1">Step 1/5</string>
    <string name="intro_media_notes2">Step 2/5</string>
    <string name="intro_media_notes3">Step 3/5</string>
    <string name="intro_media_notes4">Step 4/5</string>
    <string name="any_other_feedback">Your name</string>
    <string name="msg_feedback_confirmation">Thank you for providing your guide.</string>
    <string name="msg_feedback_final_confirmation">We thank you for your time spent.</string>
    <string name="txt_tbl_title_downloads1">Downloads</string>
    <string name="txt_tbl_title_reviews1">Reviews</string>
    <string name="txt_tbl_title_hotels1">Hotels</string>
    <string name="txt_tbl_cal_items_downloads1">8M</string>
    <string name="txt_tbl_cal_items_reviews1">400K</string>
    <string name="txt_tbl_cal_items_hotels1">1 Billion</string>
    <string name="txt_tbl_header_headline1">#1 Tour Guide App on Android and an average rating of 4.5/5</string>
    <string name="txt_tbl_header_logo_alt1">Travel App</string>
    <string name="txt_tbl_feature_list_video_alt1">Travel App</string>
    <string name="txt_sec_1_cat_1_cpromos_title_1">Show prices</string>
    <string name="txt_sec_1_cat_1_cpromos_title_2">Ljubljana - Show on map</string>
    <string name="category_deals">Deals</string>
    <string name="category_closest">Closest</string>
    <string name="category_best">Best</string>
    <string name="category_cheapest">Cheapest</string>
    <string name="txt_sec_1_cat_1_1_1_1">Radisson Blu Plaza Hotel Ljubljana</string>
    <string name="txt_sec_1_cat_1_1_1_2">Radisson Blu Plaza Hotel Ljubljana is a 4-star superior hotel located in Ljubljana and offers an à-la-carte restaurant, conference rooms and a gym.</string>
    <string name="txt_sec_1_cat_1_1_1_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_1_1_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_1_1_5">3.9 km from centre</string>
    <string name="txt_sec_1_cat_1_1_1_6">€ 120</string>
    <string name="txt_sec_1_cat_1_1_2_1">Best Western Premier Hotel Slon</string>
    <string name="txt_sec_1_cat_1_1_2_2">Set in the heart of Ljubljana, the Best Western Premier Hotel Slon offers bright and colourful rooms, a spa area, an elegant restaurant and a well-known pastry shop. </string>
    <string name="txt_sec_1_cat_1_1_2_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_1_2_4">Booked 38 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_1_2_5">250 m from centre</string>
    <string name="txt_sec_1_cat_1_1_2_6">€ 160</string>
    <string name="txt_sec_1_cat_1_1_3_1">Vault Hotel</string>
    <string name="txt_sec_1_cat_1_1_3_2">You can contact the host with questions before you book</string>
    <string name="txt_sec_1_cat_1_1_3_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_1_3_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_1_3_5">700 m from centre</string>
    <string name="txt_sec_1_cat_1_1_3_6">€ 100</string>
    <string name="txt_sec_1_cat_1_1_4_1">Art Hotel</string>
    <string name="txt_sec_1_cat_1_1_4_2">5 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_1_4_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_1_4_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_1_4_5">300 m from centre</string>
    <string name="txt_sec_1_cat_1_1_4_6">€ 99</string>
    <string name="txt_sec_1_cat_1_1_5_1">Birokrat Hotel</string>
    <string name="txt_sec_1_cat_1_1_5_2">4 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_1_5_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_1_5_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_1_5_5">Just 160 m from centre</string>
    <string name="txt_sec_1_cat_1_1_5_6">€ 78</string>
    <string name="txt_sec_1_cat_1_2_1_1">Radisson Blu Plaza Hotel Ljubljana</string>
    <string name="txt_sec_1_cat_1_2_1_2">Radisson Blu Plaza Hotel Ljubljana is a 4-star superior hotel located in Ljubljana and offers an à-la-carte restaurant, conference rooms and a gym.</string>
    <string name="txt_sec_1_cat_1_2_1_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_2_1_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_2_1_5">3.9 km from centre</string>
    <string name="txt_sec_1_cat_1_2_1_6">€ 120</string>
    <string name="txt_sec_1_cat_1_2_2_1">Best Western Premier Hotel Slon</string>
    <string name="txt_sec_1_cat_1_2_2_2">Set in the heart of Ljubljana, the Best Western Premier Hotel Slon offers bright and colourful rooms, a spa area, an elegant restaurant and a well-known pastry shop. </string>
    <string name="txt_sec_1_cat_1_2_2_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_2_2_4">Booked 38 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_2_2_5">250 m from centre</string>
    <string name="txt_sec_1_cat_1_2_2_6">€ 160</string>
    <string name="txt_sec_1_cat_1_2_3_1">Vault Hotel</string>
    <string name="txt_sec_1_cat_1_2_3_2">You can contact the host with questions before you book</string>
    <string name="txt_sec_1_cat_1_2_3_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_2_3_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_2_3_5">700 m from centre</string>
    <string name="txt_sec_1_cat_1_2_3_6">€ 100</string>
    <string name="txt_sec_1_cat_1_2_4_1">Art Hotel</string>
    <string name="txt_sec_1_cat_1_2_4_2">5 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_2_4_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_2_4_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_2_4_5">300 m from centre</string>
    <string name="txt_sec_1_cat_1_2_4_6">€ 99</string>
    <string name="txt_sec_1_cat_1_2_5_1">Birokrat Hotel</string>
    <string name="txt_sec_1_cat_1_2_5_2">4 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_2_5_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_2_5_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_2_5_5">Just 160 m from centre</string>
    <string name="txt_sec_1_cat_1_2_5_6">€ 78</string>
    <string name="txt_sec_1_cat_1_3_1_1">Radisson Blu Plaza Hotel Ljubljana</string>
    <string name="txt_sec_1_cat_1_3_1_2">Radisson Blu Plaza Hotel Ljubljana is a 4-star superior hotel located in Ljubljana and offers an à-la-carte restaurant, conference rooms and a gym.</string>
    <string name="txt_sec_1_cat_1_3_1_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_3_1_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_3_1_5">3.9 km from centre</string>
    <string name="txt_sec_1_cat_1_3_1_6">€ 120</string>
    <string name="txt_sec_1_cat_1_3_2_1">Best Western Premier Hotel Slon</string>
    <string name="txt_sec_1_cat_1_3_2_2">Set in the heart of Ljubljana, the Best Western Premier Hotel Slon offers bright and colourful rooms, a spa area, an elegant restaurant and a well-known pastry shop. </string>
    <string name="txt_sec_1_cat_1_3_2_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_3_2_4">Booked 38 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_3_2_5">250 m from centre</string>
    <string name="txt_sec_1_cat_1_3_2_6">€ 160</string>
    <string name="txt_sec_1_cat_1_3_3_1">Vault Hotel</string>
    <string name="txt_sec_1_cat_1_3_3_2">You can contact the host with questions before you book</string>
    <string name="txt_sec_1_cat_1_3_3_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_3_3_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_3_3_5">700 m from centre</string>
    <string name="txt_sec_1_cat_1_3_3_6">€ 100</string>
    <string name="txt_sec_1_cat_1_3_4_1">Art Hotel</string>
    <string name="txt_sec_1_cat_1_3_4_2">5 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_3_4_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_3_4_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_3_4_5">300 m from centre</string>
    <string name="txt_sec_1_cat_1_3_4_6">€ 99</string>
    <string name="txt_sec_1_cat_1_3_5_1">Birokrat Hotel</string>
    <string name="txt_sec_1_cat_1_3_5_2">4 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_3_5_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_3_5_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_3_5_5">Just 160 m from centre</string>
    <string name="txt_sec_1_cat_1_3_5_6">€ 78</string>
    <string name="txt_sec_1_cat_1_4_1_1">Radisson Blu Plaza Hotel Ljubljana</string>
    <string name="txt_sec_1_cat_1_4_1_2">Radisson Blu Plaza Hotel Ljubljana is a 4-star superior hotel located in Ljubljana and offers an à-la-carte restaurant, conference rooms and a gym.</string>
    <string name="txt_sec_1_cat_1_4_1_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_4_1_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_4_1_5">3.9 km from centre</string>
    <string name="txt_sec_1_cat_1_4_1_6">€ 120</string>
    <string name="txt_sec_1_cat_1_4_2_1">Best Western Premier Hotel Slon</string>
    <string name="txt_sec_1_cat_1_4_2_2">Set in the heart of Ljubljana, the Best Western Premier Hotel Slon offers bright and colourful rooms, a spa area, an elegant restaurant and a well-known pastry shop. </string>
    <string name="txt_sec_1_cat_1_4_2_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_4_2_4">Booked 38 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_4_2_5">250 m from centre</string>
    <string name="txt_sec_1_cat_1_4_2_6">€ 160</string>
    <string name="txt_sec_1_cat_1_4_3_1">Vault Hotel</string>
    <string name="txt_sec_1_cat_1_4_3_2">You can contact the host with questions before you book</string>
    <string name="txt_sec_1_cat_1_4_3_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_4_3_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_4_3_5">700 m from centre</string>
    <string name="txt_sec_1_cat_1_4_3_6">€ 100</string>
    <string name="txt_sec_1_cat_1_4_4_1">Art Hotel</string>
    <string name="txt_sec_1_cat_1_4_4_2">5 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_4_4_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_4_4_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_4_4_5">300 m from centre</string>
    <string name="txt_sec_1_cat_1_4_4_6">€ 99</string>
    <string name="txt_sec_1_cat_1_4_5_1">Birokrat Hotel</string>
    <string name="txt_sec_1_cat_1_4_5_2">4 people are looking at this moment </string>
    <string name="txt_sec_1_cat_1_4_5_3">In high demand!</string>
    <string name="txt_sec_1_cat_1_4_5_4">Booked 34 times in the last 24 hours</string>
    <string name="txt_sec_1_cat_1_4_5_5">Just 160 m from centre</string>
    <string name="txt_sec_1_cat_1_4_5_6">€ 78</string>

</resources>