<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@color/tan_background"
    android:minHeight="@dimen/list_item_height">

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_img_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/sec_one_cat_one_pos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:text="@string/txt_sec_1_cat_1_1_1_1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sec_one_cat_one_pos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_one_cat_one_pos1"
            android:text="@string/txt_sec_1_cat_1_1_1_2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sec_one_cat_one_pos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_one_cat_one_pos2"
            android:text="@string/txt_sec_1_cat_1_1_1_3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorVeryImportant"/>

        <TextView
            android:id="@+id/sec_one_cat_one_pos4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_one_cat_one_pos3"
            android:text="@string/txt_sec_1_cat_1_1_1_4"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/sec_one_cat_one_pos5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_one_cat_one_pos4"
            android:text="@string/txt_sec_1_cat_1_1_1_5"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/sec_one_cat_one_pos6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_one_cat_one_pos7"
            android:text="@string/txt_sec_1_cat_1_1_1_6"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/sec_one_cat_one_pos7"
            android:layout_width="@dimen/list_item_img_ic_one_width"
            android:layout_height="@dimen/list_item_img_ic_one_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_access_time" />

    </RelativeLayout>
</RelativeLayout>